--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,8 +20,9 @@ requirements:
     - python >=3.8
     - setuptools_scm >=6.3.1
   run:
-    - dvc-render
-    - ruamel.yaml >=0.17.11
+    - dvc >=2.46.0
+    - funcy
+    - ruamel.yaml >=0.15.0
     - python >=3.8
 
 test:
