--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - python >=3.8
     - setuptools_scm >=6.3.1
   run:
-    - dvc >=2.46.0
+    - dvc >2.45.1
     - funcy
     - ruamel.yaml >=0.15.0
     - python >=3.8
