--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,11 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.8
+    - python >=3.9
     - setuptools_scm >=6.3.1
   run:
-    - dvc >2.45.1
-    - funcy
-    - ruamel.yaml >=0.15.0
-    - python >=3.8
+    - dvc >3.48.4
+    - pynvml
 
 test:
   imports:
