--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - python >=3.9
     - setuptools_scm >=6.3.1
   run:
-    - dvc >3.48.4
+    - dvc >=3.48.4
     - pynvml
 
 test:
